--- a/style.css
+++ b/style.css
@@ -1,16 +1,245 @@
-#circle {
+@font-face {
+  font-family: 'Roboto';
+  src: url('fonts/roboto/Roboto.woff2') format('woff2'), /* Modern Browsers */
+       url('fonts/roboto/Roboto.ttf')  format('truetype'), /* Safari, Android, iOS */
+}
+
+/* Margin and padding reset */
+
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+a {
+  text-decoration: none;
+}
+
+a, p, h1, h2, h3, h4, h5, h6, 
+input[type="text"], 
+input[type="submit"], 
+#login_form label {
+  font-family: Roboto, sans-serif;
+  font-weight: 100;
+  color: #444;
+}
+
+p {
+  font-size: 1em;
+  font-weight: 300;
+}
+
+h1 {
+  font-size: 3em;
+}
+
+h2 {
+  font-size: 3em;
+}
+
+h3 {
+  font-size: 1.5em;
+}
+
+h4 {
+  font-size: 1.2em;
+}
+
+h5 {
+  font-size: 1em;
+}
+
+h6 {
+  font-size: .8em;
+}
+
+#wrapper {
+  display: block;
   position: relative;
-  width: 250px;
-  height: 250px;
-  border-radius: 50%;
-  background-color: red;
-  margin: 50px auto;
+  width: 100%;
+  height: 100%;
 }
 
-#circle:hover {
-  top: -1px;
+#companybox {
+  display: block;
+  position: relative;
+  width: 50%;
+  height: 100%;
+  float: left;
 }
 
-#circle:active {
-  top: 0px;
+#studentbox {
+  display: block;
+  position: relative;
+  width: 50%;
+  height: 100%;
+  float: left;
 }
+
+#companybox-text,
+#studentbox-text {
+  position: relative;
+  margin: 0 auto;
+  text-align: center;
+  top: 10%;
+}
+
+#companybox-text h2,
+#studentbox-text h2 {
+  display: inline-block;
+  position: relative;
+  padding: 5px;
+}
+
+/*
+#companybox-text p,
+#studentbox-text p {
+  position: relative;
+  padding: 5px 5px 0 5px;
+  margin-bottom: -40px;
+}
+*/
+
+#underline1,
+#underline2 {
+  display: block;
+  height: 2px;
+  width: 0;
+  background-color: #444;
+  margin: 0 auto;
+}
+
+.fa {
+  margin: auto;
+  text-align: center;
+}
+
+#icon-company,
+#icon-student {
+  display: block;
+  width: 100%;
+  position: relative;
+  font-size: 150px;
+}
+
+#icon-company,
+#icon-student,
+#companybox-text h2,
+#studentbox-text h2 {
+  opacity: 0.9;
+}
+
+#c-or-s {
+  position: absolute;
+  display: block;
+  width: 50px;
+  height: 100%;
+  /* Hack for at centrere absolute-div */
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 100;
+}
+
+#c-or-s p {
+  position: absolute;
+  text-align: center;
+  top: 30%;
+  padding: 10px;
+  background-color: white;
+  /* Hack for at centrere absolute-div */
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#login_btn h5 {
+  position: absolute;
+  text-align: center; 
+  top: 60%;
+  padding: 10px;
+  width: 100px;
+  background-color: white;
+  z-index: 100;
+  border: 1px solid #444;
+  border-radius: 4px;
+  text-transform: uppercase;
+  /* Hack for at centrere absolute-div */
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#login_form {
+  visibility: hidden;
+  position: absolute;
+  top: 30%;
+  width: 280px;
+  padding: 20px;
+  background-color: white;
+  z-index: 110;
+  /* Hack for at centrere absolute-div */
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#close-login-form {
+  position: absolute;
+  color: #eee;
+  top: 5px;
+  right: 25px;
+}
+
+#close-login-form:hover {
+  cursor: pointer;
+}
+
+#login_form input[type="text"],
+#login-radios,
+#login_form input[type="submit"] {
+  margin: 10px auto;
+  padding: 10px;
+  position: relative;
+}
+
+#login_form input[type="text"],
+#login_form input[type="submit"] {
+  display: block;
+  border: 1px solid #eee;
+  border-radius: 4px;
+  font-size: 1em;
+  width: 200px;
+  background-color: white;
+}
+
+#login-radios {
+  text-align: center;
+}
+
+#login_form input[type="submit"]{
+  width: 222px;
+  color: white;
+  background-color: #444; 
+  text-transform: uppercase;
+}
+
+#login_form input[type="submit"]:hover {
+  background-color: white;
+  color: #444;
+  cursor: pointer;
+}
+
+#divider_line {
+  display: absolute;
+  width: 1px;
+  height: 100%;
+  margin: 0 auto;
+  border-left: 1px dashed #999;
+}
+  
