--- a/style.css
+++ b/style.css
@@ -16,18 +16,18 @@ a {
   text-decoration: none;
 }
 
-a, p, h1, h2, h3, h4, h5, h6, 
-input[type="text"], 
-input[type="submit"], 
-#login_form label {
+a, p, h1, h2, h3, h4, h5, h6, input, label, #contact-info {
   font-family: Roboto, sans-serif;
   font-weight: 100;
-  color: #444;
+  letter-spacing: 0.03em;
+  color: rgb(212,62,73);
 }
 
 p {
   font-size: 1em;
   font-weight: 300;
+  line-height: 1.5em;
+  color: #222;
 }
 
 h1 {
@@ -106,7 +106,7 @@ h6 {
   display: block;
   height: 2px;
   width: 0;
-  background-color: #444;
+  background-color: #ddd;
   margin: 0 auto;
 }
 
@@ -135,12 +135,12 @@ h6 {
   display: block;
   width: 50px;
   height: 100%;
-  /* Hack for at centrere absolute-div */
+  z-index: 100;
+/* Hack for at centrere absolute-div */
   left: 0;
   right: 0;
   margin-left: auto;
   margin-right: auto;
-  z-index: 100;
 }
 
 #c-or-s p {
@@ -164,7 +164,7 @@ h6 {
   width: 100px;
   background-color: white;
   z-index: 100;
-  border: 1px solid #444;
+  border: 1px solid #ddd;
   border-radius: 4px;
   text-transform: uppercase;
   /* Hack for at centrere absolute-div */
@@ -174,12 +174,22 @@ h6 {
   margin-right: auto;
 }
 
+#login_btn h5:hover {
+/*
+  background-color: rgb(212, 62, 73);
+  color: #fff;
+*/
+  cursor: pointer;
+}
+
 #login_form {
-  visibility: hidden;
+/*  visibility: hidden;*/
   position: absolute;
-  top: 30%;
-  width: 280px;
+  top: 130px;
+  width: 240px;
   padding: 20px;
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
   background-color: white;
   z-index: 110;
   /* Hack for at centrere absolute-div */
@@ -193,16 +203,14 @@ h6 {
   position: absolute;
   color: #eee;
   top: 5px;
-  right: 25px;
+  right: 5px;
 }
 
 #close-login-form:hover {
   cursor: pointer;
 }
 
-#login_form input[type="text"],
-#login-radios,
-#login_form input[type="submit"] {
+#login_form input {
   margin: 10px auto;
   padding: 10px;
   position: relative;
@@ -218,20 +226,48 @@ h6 {
   background-color: white;
 }
 
-#login-radios {
-  text-align: center;
+input[type="radio"] {
+  display: none;
+}
+
+input[type="radio"] + label:before {
+  font-family: FontAwesome;
+  font-style: normal;
+  font-weight: 100;
+  color: rgb(212, 62, 73);
+  line-height: 2em;
+  font-size: 1.1em;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  padding-right: 6px;
+  width: 23px;
+  content: "\f10c";
+}
+
+input[type="radio"]:hover:before + label:hover:before {
+  cursor: pointer;
+}
+
+input[type="radio"]:checked + label:before {
+  content: "\f192";
+}
+
+label {
+  margin-left: 12px;
+  text-transform: uppercase;
+  font-size: .8em;
+  font-weight: 500;
 }
 
 #login_form input[type="submit"]{
   width: 222px;
-  color: white;
-  background-color: #444; 
+  background-color: #fff; 
   text-transform: uppercase;
 }
 
 #login_form input[type="submit"]:hover {
-  background-color: white;
-  color: #444;
+  background-color: rgb(212, 62, 73);
+  color: #fff;
   cursor: pointer;
 }
 
@@ -240,6 +276,122 @@ h6 {
   width: 1px;
   height: 100%;
   margin: 0 auto;
-  border-left: 1px dashed #999;
+  border-left: 1px dashed #ddd;
+}
+
+#footer {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 300px;
+  background-color: rgb(225,245,230);
+}
+
+#footer-left {
+  position: relative;
+  width: 50%;
+  margin: 100px auto;
+  float: left;
+}
+
+#contact-info {
+  position: relative;
+  display: block;
+  width: 330px;
+  margin-right: 100px;
+  color: #fff;
+  font-size: .8em;
+  line-height: 2em;
+  text-align: right;
+  float: right;
+}
+
+#contact-info strong {
+  font-weight: 400;
+  font-size: 1.2em;
+  padding-bottom: 6px;
+  border-bottom: 1px solid white;
+}
+
+.contact-info,
+.contact-info a {
+  color: #fff;
+  margin-top: 15px;
+  line-height: 1.6em;
+}
+
+#footer-divider {
+  position: absolute;
+  width: 1px;
+  top: 20%;
+  height: 60%;
+  border-left: 1px solid #fff;
+  /* Hack for at centrere absolute-div */
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#footer-right {
+  position: relative;
+  width: 50%;
+  margin: 100px auto;
+  float: left;
+}
+
+#sm-icons {
+  position: relative;
+  display: block;
+  width: 330px;
+  margin-left: 60px;
+}
+
+.sm {
+  position: relative;
+  display: inline-block;
+  color: white;
+  font-size: 3em;
+  padding: 20px;
+}
+
+/*----------------- Page: company-no-login.html -----------------------*/
+
+#descr-and-create-acc-btn {
+  display: block;
+  height: 400px;
+  width: 60%;
+  margin: 0 auto;
+}
+
+#description {
+  position: relative;
+  float: left;
+  width: 600px;
+  height: 80%;
+  top: 10%;
+  float: left;
+}
+
+#description p {
+  margin-top: -10px;
+}
+
+#create-account-btn h5 {
+  position: relative;
+  text-align: center; 
+  padding: 10px;
+  width: 100px;
+  top: 160px;
+  background-color: white;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  text-transform: uppercase;
+  float: right;
+}
+
+#create-account-btn h5:hover {
+  color: #fff;
+  background-color: rgb(212, 62, 73);
 }
   
