--- a/style.css
+++ b/style.css
@@ -1,16 +1,302 @@
-#circle {
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+a, p, h1, h2, h3, h4, h5, h6, input, label, #contact-info {
+  font-family: Roboto, sans-serif;
+  font-weight: 100;
+  letter-spacing: 0.03em;
+  color: rgb(212,62,73);
+}
+
+p {
+  font-size: 1em;
+  font-weight: 300;
+  line-height: 1.5em;
+  color: #222;
+}
+
+h1 {
+  font-size: 3em;
+}
+
+h2 {
+  font-size: 3em;
+  text-align: center;
+  text-decoration: underline;
+}
+
+h3 {
+  font-size: 1.5em;
+  text-align: center;
+}
+
+h4 {
+  font-size: 1.2em;
+}
+
+h5 {
+  font-size: 1em;
+}
+
+h6 {
+  font-size: .8em;
+}
+
+#wrapper {
+  display: block;
   position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+#footer {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 300px;
+  background-color: rgb(225,245,230);
+}
+
+#footer-left {
+  position: relative;
+  width: 50%;
+  margin: 100px auto;
+  float: left;
+}
+
+#contact-info {
+  position: relative;
+  display: block;
+  width: 330px;
+  margin-right: 100px;
+  color: #fff;
+  font-size: .8em;
+  line-height: 2em;
+  text-align: right;
+  float: right;
+}
+
+#contact-info strong {
+  font-weight: 400;
+  font-size: 1.2em;
+  padding-bottom: 6px;
+  border-bottom: 1px solid white;
+}
+
+.contact-info,
+.contact-info a {
+  color: #fff;
+  margin-top: 15px;
+  line-height: 1.6em;
+}
+
+#footer-divider {
+  position: absolute;
+  width: 1px;
+  top: 20%;
+  height: 60%;
+  border-left: 1px solid #fff;
+  /* Hack for at centrere absolute-div */
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#footer-right {
+  position: relative;
+  width: 50%;
+  margin: 100px auto;
+  float: left;
+}
+
+#sm-icons {
+  position: relative;
+  display: block;
+  width: 330px;
+  margin-left: 60px;
+}
+
+.sm {
+  position: relative;
+  display: inline-block;
+  color: white;
+  font-size: 3em;
+  padding: 20px;
+}
+
+/* Content in all the view*/
+#myStudPage {
+  width: 95%;
+  height: 800px;
+  border-bottom-width: thin;
+  border: 1px solid #CCC;
+  position: relative;
+  margin: 0 auto;
+}
+
+/*Three main boxes area*/
+#personalContent  {
+  min-height: 200px;
+  overflow: hidden;
+  width: 90%;
+  position: relative;
+  margin: 0 auto;
+  border-bottom-width: thin;
+  border: 1px solid #CCC;
+}
+
+/*This is for the left chunk*/
+#personalInfo {
+  width: 30%;
+  height:500px;
+  border-bottom-width: thin;
+  border: 1px solid #CCC;
+  position: relative;
+  float: left;
+  padding-right: 5px;
+  padding-left: 5px;
+}
+
+/*Smaller boxes in left box*/
+.boxLeft {
+  min-height: 50px; 
+  overflow: hidden; /*Hack til at få container boks til at tilpasse sig indhold*/
+  min-width: 50px;
+  overflow: hidden;
+  border: 1px solid #CCC;
+  position: relative;
+  float: left;
+  margin-right: 4px;
+  
+}
+
+/*This is for the central chunk*/
+#activeProjects {
+  width: 30%;
+  height:500px;
+  border: 1px solid #CCC;
+  position: relative;
+  float: left;
+  padding-left: 5px;
+  padding-right: 5px;
+  margin-left: 3%;
+  margin-right: 3%;
+}
+
+/*This is the chunk to the right*/
+#previousProjects {
+  width: 30%;
+  height:500px;
+  border: 1px solid #CCC;
+  position: relative;
+  float: left;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+
+
+/* GOOGLE MATRIAL CARDS CSS */
+/* THIS IS .CSS FOR THE MATERIAL INPUT BOX CARD */
+
+#materialBox {
   width: 250px;
-  height: 250px;
-  border-radius: 50%;
-  background-color: red;
-  margin: 50px auto;
+  height:180px;
+  border-bottom-width: thin;
+  border: 1px solid #CCC;
+  margin: 0 auto;
+  position: relative;
 }
 
-#circle:hover {
-  top: -1px;
+#materialContent {
+  width: 165px;
+  margin: 0 auto;
+  height: 80%;
+  margin-top: 10%;
+  margin-bottom: 10%;
+  border-bottom-width: thin;
+  position: relative;
 }
 
-#circle:active {
-  top: 0px;
+.group        { 
+  position:relative; 
+  margin-bottom:45px;
+}
+input         {
+  font-size:18px;
+  padding:10px 10px 10px 5px;
+  display:block;
+  width:150px;
+  border:none;
+  border-bottom:1px solid #757575;
+}
+input:focus     { 
+  outline:none;
+}
+
+/* LABEL */
+label {
+  color:#999; 
+  font-size:18px;
+  font-weight:normal;
+  position:absolute;
+  pointer-events:none;
+  left:5px;
+  top:10px;
+  transition:0.2s ease all;
+}
+
+input:focus ~ label, input:valid ~ label {
+  top:-20px;
+  font-size:14px;
+  color:#5264AE;
+}
+
+/* BOTTOM BARS */
+.bar  { position:relative; display:block; width:165px; }
+.bar:before, .bar:after   {
+  content:'';
+  height:2px; 
+  width:0;
+  bottom:1px; 
+  position:absolute;
+  background:#5264AE; 
+  transition:0.2s ease all; 
+}
+.bar:before {
+  left:50%;
+}
+.bar:after {
+  right:50%; 
+}
+
+/* active state */
+input:focus ~ .bar:before, input:focus ~ .bar:after {
+  width:50%;
+}
+
+/* HIGHLIGHTER ================================== */
+.highlight {
+  position:absolute;
+  height:60%; 
+  width:100px; 
+  top:25%; 
+  left:0;
+  pointer-events:none;
+  opacity:0.5;
+}
+
+/* active state */
+input:focus ~ .highlight { 
+  animation:inputHighlighter 0.3s ease;
+}
+
+/* ANIMATIONS ================ */
+@keyframes inputHighlighter {
+  from  { background:#5264AE; }
+  to    { width:0; background:transparent; }
 }
