--- a/css/hover.css
+++ b/css/hover.css
@@ -1792,15 +1792,15 @@
   bottom: 0;
   border-style: solid;
   border-width: 10px 10px 0 10px;
-  border-color: #e1e1e1 transparent transparent transparent;
+  border-color: #fff transparent transparent transparent;
   -webkit-transition-duration: 0.3s;
   transition-duration: 0.3s;
   -webkit-transition-property: bottom;
   transition-property: bottom;
 }
 .bubble-float-bottom:hover, .bubble-float-bottom:focus, .bubble-float-bottom:active {
-  -webkit-transform: translateY(-5px) translateZ(0);
-  transform: translateY(-5px) translateZ(0);
+  -webkit-transform: translateY(5px) translateZ(0);
+  transform: translateY(5px) translateZ(0);
 }
 .bubble-float-bottom:hover:before, .bubble-float-bottom:focus:before, .bubble-float-bottom:active:before {
   bottom: -10px;
